force-app/main/default/objects/UI_Management__mdt/UI_Management__mdt.object-meta.xml
<CustomObject>
    <label>UI Management</label>
    <pluralLabel>UI Management</pluralLabel>
</CustomObject>