force-app/main/default/objects/UI_Management__mdt/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tabular</fullName>
                <default>true</default>
                <label>Tabular</label>
            </value>
            <value>
                <fullName>Detailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>