force-app/main/default/objects/UI_Management__mdt/fields/UI_Icon__c.field-meta.xml
<CustomField>
    <fullName>UI_Icon__c</fullName>
    <label>UI Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>